<resources>
    <string name="app_name">EchoesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recordatoriosBtn">RECORDATORIOS</string>
    <string name="pictogramasBtn">PICTOGRAMAS</string>
    <string name="logo">Logo</string>
    <string name="semana">Semana</string>
    <string name="hoy">Hoy</string>
    <string name="mes">Mes</string>
    <string name="todos">Todos</string>
    <string name="LoginHint">Usuario</string>
    <string name="LoginPwd">Contraseña</string>
    <string name="LoginShow">Mostrar</string>
    <string name="LoginBtn">Acceder</string>
    <string name="CreateAc">Crear una cuenta</string>
    <string name="SignUpBtn">Crear</string>
    <string name="BackBtn">Volver</string>
    <string name="AddReminderBtn">AÑADIR RECORDATORIO</string>
    <string name="ReminderContentTxt">Inserta tu yecordatorio aqui...</string>
    <string name="ReminderDateTxt">Fecha dd/mm/yyyy</string>
    <string name="AddRemBtn">Añadir</string>
    <string name="shareBtn">Compartir</string>
    <string name="elige_una_fecha">Selecciona una fecha</string>
    <string name="quiero_ocio">QUIERO OCIO</string>
    <string name="me_duele">ME DUELE</string>
    <string name="quiero_comer_beber">QUIERO COMER/BEBER</string>
    <string name="quiero_asearme">QUIERO ASEARME</string>
    <string name="share">Share</string>
    <string name="FillFields">Fill all the fields first...</string>
    <string name="SuccessReminderCreation">Success creating the reminder</string>
    <string name="Ocultar">Ocultar</string>
    <string name="Mostrar">Mostrar</string>
    <string name="LoginFail">Login failed, please try again</string>
    <string name="SuccessReminderDelete">Reminder succesfully deleted!</string>
    <string name="SuccessAccountCreation">Success creating an account</string>
    <string name="Agua">Quiero beber agua</string>
    <string name="Carne">Quiero comer carne</string>
    <string name="Cafe">Quiero beber café</string>
    <string name="Cerveza">Quiero beber cerveza</string>
    <string name="Ensalada">Quiero comer ensalada</string>
    <string name="FrutosSecos">Quiero comer frutos secos</string>
    <string name="Galletas">Quiero comer galletas</string>
    <string name="Golosinas">Quiero comer golosinas</string>
    <string name="Hortalizas">Quiero comer hortalizas</string>
    <string name="Huevos">Quiero comer huevos</string>
    <string name="Leche">Quiero beber leche</string>
    <string name="Legumbres">Quiero comer legumbres</string>
    <string name="Pan">Quiero comer pan</string>
    <string name="Pasta">Quiero comer pasta</string>
    <string name="Pescado">Quiero comer pescado</string>
    <string name="Tarta">Quiero comer tarta</string>
    <string name="Té">Quiero beber té</string>
    <string name="Verduras">Quiero comer verduras</string>
    <string name="Vino">Quiero beber vino</string>
    <string name="Yogur">Quiero comer yogur</string>
    <string name="Zumo">Quiero beber zumo</string>
    <string name="Baño">Quiero ir al baño</string>
    <string name="CortarUñas">Quiero cortarme las uñas</string>
    <string name="Dientes">Quiero limpiarme los dientes</string>
    <string name="Ducha">Quiero ducharme</string>
    <string name="LavarCara">Quiero lavarme la cara</string>
    <string name="Manos">Quiero lavarme las manos</string>
    <string name="Maquillaje">Quiero maquillarme</string>
    <string name="Peinar">Quiero peinarme</string>
    <string name="Pelo">Quiero cortarme el pelo</string>
    <string name="PintarUñas">Quiero pintarme las uñas</string>
    <string name="Vestir">Quiero vestirme</string>
    <string name="DolorBrazo">Me duele el brazo</string>
    <string name="DolorCabeza">Me duele la cabeza</string>
    <string name="DolorCulo">Me duele el trasero</string>
    <string name="DolorEspalda">Me duele la espalda</string>
    <string name="DolorEstomago">Me duele el estómago</string>
    <string name="DolorGarganta">Me duele la garganta</string>
    <string name="DolorMano">Me duele la mano</string>
    <string name="DolorDientes">Me duelen los dientes</string>
    <string name="DolorPecho">Me duele el pecho</string>
    <string name="DolorPie">Me duele el pie</string>
    <string name="DolorPierna">Me duele la pierna</string>
    <string name="DolorGenitales">Me duelen los genitales</string>
    <string name="DolorOreja">Me duele la oreja</string>
    <string name="DolorOjos">Me duelen los ojos</string>
    <string name="DolorLengua">Me duele la lengua</string>
    <string name="DolorNariz">Me duele la nariz</string>
    <string name="Bailar">Quiero bailar</string>
    <string name="Cartas">Quiero jugar a las cartas</string>
    <string name="Gimnasio">Quiero ir al gimnasio</string>
    <string name="JuegoMesa">Quiero jugar a juegos de mesa</string>
    <string name="Leer">Quiero leer</string>
    <string name="Manualidades">Quiero hacer manualidades</string>
    <string name="Musica">Quiero escuchar música</string>
    <string name="Paseo">Quiero dar un paseo</string>
    <string name="Pelicula">Quiero ver una película</string>
    <string name="Pintar">Quiero pintar</string>

</resources>