<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/echoeslogo"
            app:layout_constraintBottom_toTopOf="@+id/usernameSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="297dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#000000"
            android:text="@string/SignUpBtn"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/backLogButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordSignUp" />

        <EditText
            android:id="@+id/passwordSignUp"
            android:layout_width="225dp"
            android:layout_height="45dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/LoginPwd"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/signUpButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameSignUp" />

        <Button
            android:id="@+id/showPwdBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="84dp"
            android:backgroundTint="#009688"
            android:text="@string/LoginShow"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toTopOf="@+id/signUpButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/passwordSignUp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/backLogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#009688"
            android:text="@string/BackBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

        <EditText
            android:id="@+id/usernameSignUp"
            android:layout_width="225dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/LoginHint"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/passwordSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>